--- a/index.css
+++ b/index.css
@@ -5,4 +5,23 @@ body {
 .container {
     display: flex;
     justify-content: space-around;
+    background-color: blue;
+    padding: 10px 0px 40px;
+    text-align:center;
+    margin: 600px 300px;
+    
+}
+
+h3{
+    color:#eeeeee;
+    font-size: 36px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    
+}
+
+h1{
+    background-color: black;
+    color:red;
+    padding: 35px;
 }
